--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "devDependencies": {
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@types/d3": "^7.4.1"
   },
   "dependencies": {
-    "@types/d3": "^7.4.1"
+    "d3": "^7.8.5"
   }
 }
